# test_elegance

./: Makefile.am  configure.ac  test.c  test.edc  test.h
